--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+    src="https://app.rybbit.io/api/script.js"
+    data-site-id="246"
+    defer
+></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>swipe-and-play-arcade</title>
